--- a/styles/gameontext.css
+++ b/styles/gameontext.css
@@ -19,7 +19,7 @@
   padding-bottom: 10px;
 }
 .page-inner section h1 {
-    background-image: url("https://game-on.org/images/go-logo.png");
+    background-image: url("https://gameontext.org/images/go-logo.png");
     background-size: 1.5em;
     background-repeat: no-repeat;
     background-position: center right;
