--- a/styles/gameontext.css
+++ b/styles/gameontext.css
@@ -45,3 +45,12 @@
 .book-summary ul.summary li.active>a {
     color: #65cfd9;
 }
+.languagename {
+  padding-left: 5px;
+  padding-right: 5px;
+  color: #FFFFFF;
+  background: #BBBBBB;
+  margin-left: 5px;
+  margin-right: 5px;
+  font-size: 0.8em;
+}
