more analytics stuff
Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -26,7 +26,7 @@
           window.ga('gameontext.require', 'linker');
           window.ga('gameontext.linker:autoLink', ['gameontext.org','blog.gameontext.org','book.gameontext.org']);
           window.ga('gameontext.set','dimension1', 'book');
-          window.ga('gameontext.set','location', 'https://book.gameontext.org/');
+          window.ga('gameontext.set','hostname', 'book.gameontext.org');
           window.ga('gameontext.send','pageview');
         });
         </script>
